--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -1,1 +1,35 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kuujke2745/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kuujke2745/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kuujke2745/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/17/n11728852.md#1" target="_blank">【思想领袖】专访邵岚：需反共捍卫价值观</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/17/n11728852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191210-Yichun-American-Thought-Leaders-Joey-Siu-150x120.jpg" align ="left"></a>我们永远不能低估，中国共产党为了维护面子、控制整个国家，从而压制各种民主运动的决心。我一直认为，他们非常害怕人权保护自由民主，甚至革命等思想，害怕这些传入中国。因为这肯定会引起震动，中共非常非常担忧，因为这肯定会导致中国大陆发生大规模抗议和示威活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11760936.md#1" target="_blank">大陆民众新年感谢法轮功 问候李大师</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11760936.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5dc334d71e3c7_ttl7daylZx_2019-12-29-1912060916544773-150x120.jpg" align ="left"></a>2020新年之际，明白法轮功真相及亲身受益的大陆各界民众，通过大纪元、明慧网等各种途径向法轮功团体及法轮功创始人李洪志大师表示感谢，并问候新年好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5f247f8707d13_ttl7dayRGj_tn0101-11-150x120.jpg" align ="left"></a>香港的民阵元旦大游行已经结束。因为爆发冲突，元旦的大游行被香港警方中途叫停，但是民阵也录得超过103万人上街的数字，如果不被叫停，相信数字会更多，就算现在的也是超过了6月9日的人数。警方的数字是在维园出发和等候的人加起来一共是6万多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/10/n11714048.md#1" target="_blank">60国海外法轮功学员恭祝李洪志师父新年好</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/10/n11714048.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/A51G6233-600x400-1-600x400-150x120.jpg" align ="left"></a>在2020新年到来之际，60个国家和地区的法轮功学员向明慧网寄来精美的贺卡、贺词，向法轮功创始人李洪志师父献上新年祝福，并表达对师父崇高的敬意和感激之情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761187.md#1" target="_blank">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/003FotoJet_meitu_1-150x120.jpg" align ="left"></a>2019年的平安夜，山东维权人士界立建历时一年来到美国。他在国内因为维权和民主活动，多次被拘留并被关进精神病院，被迫从非洲逃到美国。不想中共一路追踪，他的护照被骗，人在巴西险被绑架，上演了一场万里大逃亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11750457.md#1" target="_blank">【新闻看点】新年祝福 全球网友寄语香港</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11750457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/72225d6dab42a3495a90e634c5203034-150x120.jpg" align ="left"></a>2019年过去了，在2020年的第一天，沐阳代表《新闻看点》所有工作人员，祝愿所有的朋友以及您的家人身康体健，事事如意。特别祝福香港同胞，早日驱走红魔。期待着将来的一天，大家不用带着面具上街，恢复往日自由的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756981.md#1" target="_blank">法轮大法纽约旗队学员 新年谢师恩</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fea8631c11236ef008027ebef4e3645e-150x120.jpg" align ="left"></a>正看瑞雪纷飞，又觉春风徐来。2020年新年来临之际，“法轮大法纽约旗队”学员12月29日齐聚上州，向法轮功创始人李洪志先生恭祝新年好，并表达弟子们对师尊的敬意和感恩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 10:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank">【直播回放】逾103万港人元旦大游行</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010156271501-150x120.jpg" align ="left"></a>香港民阵再次发起元旦大游行，以“毋忘承诺 并肩同行”为主题，2020年1月1日由维多利亚公园步行至遮打道行人专用区，暂时未获警方发出不反对通知书。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11760052.md#1" target="_blank">上海老妇死于维权路 女儿为母伸冤</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11760052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/S__14065688-150x120.jpg" align ="left"></a>上海一名87岁老妇因房屋遭强拆而上访，四年前在北京维权时病逝医院，如今遗体仍放置在北京天坛医院太平间。最近，老妇的女儿为替母亲伸冤，向中共最高领导人呼吁，拯救中国被践踏死亡的法律。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 4:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank">2019岁末 民间记者会给港人的一封信</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908190851422188-150x120.jpg" align ="left"></a>民间记者会是香港这场反送中运动没有大台的情况下，为了制衡政府虚假的记者会，民间自发建立的将民众声音向外宣扬的平台，于2019年8月6日开始第一次的民间记者会，重申示威者的五大诉求、要求调查警方滥用权力的行为及元朗袭击事件，到12月23日“逆权运动现生机 素人工会抗强权”，民间记者会共举办了29次记者会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11759107.md#1" target="_blank">【拍案惊奇】2020注定不平凡 9件事陪你跨年</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11759107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/tn1231-150x120.jpg" align ="left"></a>今天是美东时间2019年12月31日，星期二。这是2019年的最后一天，大家应该许一个愿望，为明年做一个规划。比如，如何做一个更好的自己。我的新年愿望之一，就是进一步完善我们这个《新闻拍案惊奇》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11758889.md#1" target="_blank">黑龙江男子病重仍遭非法拘留 9天后病亡</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11758889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-150x120.jpg" align ="left"></a>黑龙江佳木斯市林苑小镇法轮功学员杨胜军被非法拘留9天后，突然送医死亡，家属聘律师查真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank">安全担忧 美陆军紧随海军禁用TikTok</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg" align ="left"></a>抖音国际版TikTok正在引起越来越多的安全隐患，在美国海军于半个前做出禁用该应用程序的相关规定后，美国陆军也迅速做出反应：禁止其士兵这个正在青少年中流行的短视频应用程序，以免带来安全问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11757478.md#1" target="_blank">港人感佩法轮功传真相 恭祝李大师新年好</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11757478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_2212-150x120.jpeg" align ="left"></a>香港抗争运动从6月持续至今，在活动现场或网上不时会听到或看到港人向法轮功团体致歉，表示他们以前因低估中共的邪恶程度而误会法轮功，并感谢法轮功学员这些年坚持传播真相。有港人恭祝李洪志大师新年好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank">2019岁末 人权律师及异见人士遭密集抓捕</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-3-150x120.jpg" align ="left"></a>自12月26日到31日，十余位包括维权律师、异见人士及部分家属遭到中共当局集中抓捕、抄家、询问，甚至失联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank">《拍案惊奇》2020台湾大选两类观点引关注</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191231222-150x120.jpg" align ="left"></a>2020年1月11日，这么说太远了，就是从今天起再过12天，台湾就要举行大选。华人观众非常关注这场选举的结果，因为大家都觉得，这一次2020大选对台湾的未来命运极为重要。今天我们会简单介绍这场选举的概况，以及最近一次，也是唯一一次总统候选人辩论的要点。然后，作为我们节目几个月来一直关注的重点议题——香港，我们还会谈到一些最新情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756278.md#1" target="_blank">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg" align ="left"></a>二零一九年十二月二十九日，来自宜兰县各乡镇的部分法轮功学员，在县政府行政大楼向他们的师父拜年。值此象征除旧布新的岁末，宜兰学员由衷感念师父的谆谆教诲与慈悲救度之恩，合影恭祝师父新年好，表达内心最真挚的祝愿，并互相鼓励来年更精进。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756214.md#1" target="_blank">“秋雨之福教会”牧师王怡被重判9年</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756214.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/05/605031612581695-150x120.jpg" align ="left"></a>12月30日，大陆知名牧师王怡在成都中院被重判9年有期徒刑，罪名是“煽动颠覆国家政权罪”及“非法经营罪”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753358.md#1" target="_blank">黄琦被秘密转至监狱 母亲仍被软禁</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-5-150x120.jpg" align ="left"></a>六四天网创办人，大陆著名人权活动家黄琦于圣诞节前一天12月24日，被中共当局秘密转到四川巴中监狱，剩余刑期还有8年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank">天津强拆世界级别墅群 数百业主走投无路</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/st.coTE9r1M0pCq-150x120.jpg" align ="left"></a>天津武清区世界级岛居别墅区翠金湖美墅岛在寒冬腊月强拆，无安置，赔偿不公，数百业主走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11749398.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11749398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2006-7-20-gansu-02-150x120.jpg" align ="left"></a>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世的有30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 4:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank">重庆中学生在学校坠亡 家人被禁见遗体</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-20-150x120.jpg" align ="left"></a>重庆市巫溪中学高二学生王东平在学校期间，疑遭老师羞辱后坠楼身亡，然而其家人至今无法见到死者尸体，并被警察带走，爆光视频也在微博上被接连删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank">北京女子劳教所前所长李继荣的罪行</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1068163599_fiaOd0-150x120.jpg" align ="left"></a>原北京女子劳教所所长李继荣积极参与迫害法轮功，对法轮功学员实施残酷的精神和洗脑迫害，罪行累累。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753695.md#1" target="_blank">中共代理人加速政治分化香港 限制港人自由</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DSC_3766_refine-150x120.jpg" align ="left"></a>香港警察队员佐级协会主席林志伟于12月27日向会员发信，批评“和理非”，将“和理非”及“勇武派”共同归为“反派”来打击。前特首梁振英则于29日在脸书回应香港电台增拨资源的要求，唱反调，称要彻底把香港金融和香港人生活基础条件，牢牢控制在港府手里，用这些资源来调控“反派”和“挺派”力量。从林志伟及梁振英的舆论，不难看到中共加速政治分化港人和进一步限制香港人的自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 6:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank">历史即将翻开新页 痛忆香港抗争者的创伤</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190825115157100615-150x120.jpg" align ="left"></a>香港这场轰轰烈烈的反送中运动上升到反抗中共暴政的运动，被认为是香港人的觉醒运动。香港年轻一代为捍卫港人自身权益和香港的未来付出了巨大代价，也感动了更多的成年人挺身而出，形成不分勇武、不割席“齐上齐落”的抗争场面。
+
+新的一年即将来临，历史将翻过新的一页，让我们来盘点一下这半年多来，在中共暴政背后的操控下，香港警方的滥捕滥暴给港人留下怎么样的创伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank">港警官吐露心声：被迫处于冲突中心 支持调查</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-1-150x120.jpg" align ="left"></a>圣诞节期间，香港再次爆发警民冲突，上百人被逮捕，引起争议的港警处于冲突中心。德广联驻记者在香港采访了一名警官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 11:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank">黄之锋入选金融时报全球50大重要人物</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wong1-150x120.jpg" align ="left"></a>英国《金融时报》日前公布了2010年以来过去10年影响全球的50位重要人物名单，其中香港众志秘书长黄之锋以“香港政治活动人士”的身份入选，成为唯一上榜的香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761249.md#1" target="_blank">港民新年诉求不变 坚持反暴政不会退缩</a><br></h3>刚踏入2020年第一天，逾103万香港市民大游行坚持向港府提出“五大诉求，缺一不可”的愿望。在香港维多利亚公园，参加游行的港民接受本报采访时，均表达了新的一年里，坚持和平理性争取五大诉求，反对中共暴力政权不会退缩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_3.md#1">下一页</a></h3></td></tr>
+</table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/ncid278_2.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncid278_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/ncid278_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_2.htm">http://www.epochtimes.com/gb/ncid278_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
